--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "unit10hw",
+  "name": "template-engine-employee-summary",
   "version": "1.0.0",
-  "description": "OOP and testing for week 10 homework",
-  "main": "app.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "jest --verbose test/*"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+    "url": "git+https://github.com/ZJayes/template-engine-employee-summary.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/stevetrilogy/unit10hw/issues"
+    "url": "https://github.com/ZJayes/template-engine-employee-summary/issues"
   },
-  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  },
-  "devDependencies": {
-    "jest": "^24.8.0"
-  }
+    "inquirer": "^7.3.3",
+    "jest": "^26.6.3"
+  }, 
+  "homepage": "https://github.com/ZJayes/template-engine-employee-summary#readme"
 }
